--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.2"
+    "@astrojs/react": "^2.1.2",
+    "@types/react": "^18.2.5",
+    "@types/react-dom": "^18.2.3",
+    "astro": "^2.3.2",
+    "bootstrap": "^5.3.0-alpha3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
