--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.19.1",
     "@astrojs/react": "^2.1.2",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
