--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.3",
     "astro": "^2.3.2",
     "bootstrap": "^5.3.0-alpha3",
+    "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
